--- a/acceuil.html
+++ b/acceuil.html
@@ -15,8 +15,7 @@
 <body>
     <header>
         <div id="header" class="p-5 text-center bg-image"
-            style="background-image: url('headerfond.jpg'); height: 300px; color: white;">
-            Site de Apolline & Violette
+            style="background-image: url('1074x300.png'); height: 300px; color: white;">
         </div>
     </header>
 
