--- a/acceuil.html
+++ b/acceuil.html
@@ -12,65 +12,66 @@
     <link rel="stylesheet" href="acceuil.css">
 </head>
 
-<body>
+<body class="container-fluid">
     <header>
         <div id="header" class="p-5 text-center bg-image"
-            style="background-image: url('1074x300.png'); height: 300px; color: white;">
+            style="background-image: url('1074x300.png'); height: 200px; color: white;">
         </div>
     </header>
 
-<!-- dessous du header -->
-    <div>
-        <!-- nav a gauche -->
-        <nav class="navbar navbar-light bg-light col-md-3">
-            <!-- formulaire -->
-            <form id="nav">
-                <!-- option connexions -->
-                <!-- email -->
-                <div class="mb-3 row">
-                    <label for="staticEmail" class="col-sm-3 col-form-label">Email</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="staticEmail" placeholder="email@example.com">
-                    </div>
-                </div>
-                <!-- password -->
-                <div class="mb-3 row">
-                    <label for="inputPassword" class="col-sm-3 col-form-label">Password</label>
-                    <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword" placeholder="password">
-                    </div>
-                </div>
-                <!-- bouton connecxion -->
-                <button type="submit" class="btn btn-outline-secondary">OK</button>
-                <!-- recherche -->
-                <div class="input-group mb-3">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon1">
-                        <i class="fa fa-search" aria-hidden="true"></i>
-                    </button>
-                    <input type="text" class="form-control" placeholder="Rechercher"
-                        aria-label="Example text with button addon" aria-describedby="button-addon1">
-                </div>
-                <!-- hypertext recherche avancée -->
-                <a href="recherche.html">Recherche Avancée</a>
-            </form>
-        </nav>
-    </div>
-    <div>
-        <!-- article a droite -->
+    <!-- dessous du header -->
+    <div class="row">
         <div>
-            <textarea>future bdd</textarea>
+            <!-- nav a gauche -->
+            <nav class="navbar navbar-light bg-light col-md-3">
+                <!-- formulaire -->
+                <form id="nav">
+                    <!-- option connexions -->
+                    <!-- email -->
+                    <div class="mb-3 row">
+                        <label for="staticEmail" class="col-sm-3 col-form-label">Email</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="staticEmail" placeholder="email@example.com">
+                        </div>
+                    </div>
+                    <!-- password -->
+                    <div class="mb-3 row">
+                        <label for="inputPassword" class="col-sm-3 col-form-label">Password</label>
+                        <div class="col-sm-10">
+                            <input type="password" class="form-control" id="inputPassword" placeholder="password">
+                        </div>
+                    </div>
+                    <!-- bouton connecxion -->
+                    <button type="submit" class="btn btn-outline-secondary">OK</button>
+                    <!-- recherche -->
+                    <div class="input-group mb-3">
+                        <button class="btn btn-outline-secondary" type="button" id="button-addon1">
+                            <i class="fa fa-search" aria-hidden="true"></i>
+                        </button>
+                        <input type="text" class="form-control" placeholder="Rechercher"
+                            aria-label="Example text with button addon" aria-describedby="button-addon1">
+                    </div>
+                    <!-- hypertext recherche avancée -->
+                    <a href="recherche.html">Recherche Avancée</a>
+                </form>
+            </nav>
         </div>
-        <!-- icone panier haut droite -->
-        <span>
-            <i class="fa fa-shopping-basket" aria-hidden="true"></i>
-        </span>
-        <!-- icone panier hover optionnel -->
-        <!-- <span> <i class="fa fa-shopping-basket" aria-hidden="true"></i></span> -->
+        <div class="column">
+            <div class="row">
+             <span>
+                <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+            </span>
+            </div>
+            <!-- article a droite -->
+            <div>
+                <textarea>future bdd</textarea>
+            </div>
+          
+        </div>
     </div>
-
     <footer style="background-color: #B82A0C;">
-        <a href ="nousconatcter.html" style= "color:white;">Nous contacter</a>
-       
+        <a href="nousconatcter.html" style="color:white;">Nous contacter</a>
+
     </footer>
 
     <script src="bs4/js/jquery-3.5.1.slim.min.js"></script>
