--- a/acceuil.html
+++ b/acceuil.html
@@ -13,17 +13,18 @@
 </head>
 
 <body class="container-fluid">
-    <header>
+    <header class="col-xs-12">
         <div id="header" class="p-5 text-center bg-image"
             style="background-image: url('1074x300.png'); height: 200px; color: white;">
         </div>
     </header>
 
     <!-- dessous du header -->
-    <div class="row">
-        <div>
+    <div  class="row ">
+
+        <div class="col-md-4">
             <!-- nav a gauche -->
-            <nav class="navbar navbar-light bg-light col-md-3">
+            <nav class="navbar navbar-light bg-light col-md-12">
                 <!-- formulaire -->
                 <form id="nav">
                     <!-- option connexions -->
@@ -56,18 +57,20 @@
                 </form>
             </nav>
         </div>
-        <div class="column">
-            <div class="row">
-             <span>
-                <i class="fa fa-shopping-basket" aria-hidden="true"></i>
-            </span>
-            </div>
-            <!-- article a droite -->
+
+        <!-- article a droite -->
+
+        <div class="col-md-7">
             <div>
                 <textarea>future bdd</textarea>
             </div>
-          
         </div>
+        <div class="col-md-1">
+            <span>
+                <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+            </span>
+        </div>
+
     </div>
     <footer style="background-color: #B82A0C;">
         <a href="nousconatcter.html" style="color:white;">Nous contacter</a>
