--- a/acceuil.html
+++ b/acceuil.html
@@ -9,69 +9,85 @@
     <link rel="stylesheet" href="bs4/css/bootstrap.min.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="bs4/css/font-awesome.min.css">
+    <!-- fichier css -->
     <link rel="stylesheet" href="acceuil.css">
 </head>
 
-<body class="container-fluid">
-    <header class="col-xs-12">
-        <div id="header" class="p-5 text-center bg-image"
-            style="background-image: url('1074x300.png'); height: 200px; color: white;">
-        </div>
-    </header>
-
-    <!-- dessous du header -->
-    <div  class="row ">
-
-        <div class="col-md-4">
-            <!-- nav a gauche -->
-            <nav class="navbar navbar-light bg-light col-md-12">
-                <!-- formulaire -->
-                <form id="nav">
-                    <!-- option connexions -->
-                    <!-- email -->
-                    <div class="mb-3 row">
-                        <label for="staticEmail" class="col-sm-3 col-form-label">Email</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="staticEmail" placeholder="email@example.com">
-                        </div>
-                    </div>
-                    <!-- password -->
-                    <div class="mb-3 row">
-                        <label for="inputPassword" class="col-sm-3 col-form-label">Password</label>
-                        <div class="col-sm-10">
-                            <input type="password" class="form-control" id="inputPassword" placeholder="password">
-                        </div>
-                    </div>
-                    <!-- bouton connecxion -->
-                    <button type="submit" class="btn btn-outline-secondary">OK</button>
-                    <!-- recherche -->
-                    <div class="input-group mb-3">
-                        <button class="btn btn-outline-secondary" type="button" id="button-addon1">
-                            <i class="fa fa-search" aria-hidden="true"></i>
-                        </button>
-                        <input type="text" class="form-control" placeholder="Rechercher"
-                            aria-label="Example text with button addon" aria-describedby="button-addon1">
-                    </div>
-                    <!-- hypertext recherche avancée -->
-                    <a href="recherche.html">Recherche Avancée</a>
-                </form>
-            </nav>
-        </div>
-
-        <!-- article a droite -->
-
-        <div class="col-md-7">
-            <div>
-                <textarea>future bdd</textarea>
+<body>
+    <div class="container-fluid p-0">
+        <div class="col-xs-12">
+            <div id="header" class="p-5 text-center bg-image">
             </div>
         </div>
-        <div class="col-md-1">
-            <span>
-                <i class="fa fa-shopping-basket" aria-hidden="true"></i>
-            </span>
-        </div>
-
+        
     </div>
+    <!-- dessous du header -->
+    <div class="container-fluid">
+        <div class="row">
+
+            <div class="col-sm-2 sidenav">
+                <!-- nav a gauche -->
+                <nav class="navbar navbar-light col-md-12 sticky-top p-0 py-3" id="navbar">
+                    <!-- formulaire -->
+                    <form id="nav">
+                       
+                        <!-- option connexions -->
+                        <!-- email -->
+                        <div class="mb-3">
+                            <label for="email">Email </label>
+                            <input type="email" class="form-control form-control-sm" id="email" placeholder="you@example.com">
+                            <div class="invalid-feedback">
+                              Please enter a valid email address for shipping updates.
+                            </div>
+                          </div>
+                        <!-- password -->
+                        <div class="mb-3 row">
+                            <label for="inputPassword" class="col-sm-3 col-form-label">Password</label>
+                            <div class="col-sm-10">
+                                <input type="password" class="form-control form-control-sm" id="inputPassword" placeholder="password">
+                            </div>
+                        </div>
+                        <!-- bouton connecxion -->
+                        <button type="submit" class="btn btn-block btn-sm btn-outline-light">OK</button>
+                        <!-- recherche -->
+                        <div class="input-group my-5">
+                            <button class="btn-sm btn-outline-secondary bg-white" type="button" id="button-addon1">
+                                <i class="fa fa-search" aria-hidden="true"></i>
+                            </button>
+                            <input type="text" class="form-control form-control-sm" placeholder="Rechercher"
+                                aria-label="Example text with button addon" aria-describedby="button-addon1">
+                        </div>
+                        <!-- hypertext recherche avancée -->
+                        <a href="recherche.html" id="recherche">Recherche Avancée</a>
+                    </form>
+                </nav>
+            </div>
+
+            <!-- article a droite -->
+            <div class="col col-sm-10">
+
+            <header class="py-3 sticky-top" >
+                        <div class="row flex-nowrap justify-content-between align-items-center">
+                            <div class="col d-flex justify-content-end align-items-center">
+                                <a class="btn btn-sm btn-outline-secondary" href="#"> 
+                                    <span>
+                                        <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                                    </span>
+                                </a>
+
+                            </div>
+                        </div>
+            </header>
+                <div class="col-md-11 my-3" style="height: 1500px;">
+                    <div>
+                        <textarea>future bdd</textarea>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
     <footer style="background-color: #B82A0C;">
         <a href="nousconatcter.html" style="color:white;">Nous contacter</a>
 
