bootstrap recherche et acceuil, js bdd

--- a/acceuil.html
+++ b/acceuil.html
@@ -24,6 +24,7 @@
 
     </div>
     <!-- dessous du header -->
+    <!-- background -->
     <div id="bg">
         <div class="row">
             <div class="col-sm-3 sidenav mt-3">
@@ -31,7 +32,6 @@
                     <div class="row">
                         <div class="col-md-12 w-100">
                             <h7 class="mb-3" id="options-co">Options de connexions:</h7>
-
                             <form class="needs-validation mt-3" novalidate="">
                                 <div class="mb-3">
                                     <label for="email" class="login">Email </label>
@@ -50,7 +50,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <button class="btn btn-outline-light btn-md mt-1 mb-3" id="ok" type="submit">OK</button>
+                                <button class="btn btn-outline-light btn-md mt-1 mb-3" id="ok"
+                                    type="submit">OK</button>
                                 <hr class="mb-4">
 
                                 <div class="input-group">
@@ -63,9 +64,8 @@
                                     <input type="text" class="form-control" placeholder="Recherche">
 
                                 </div>
-                                <a href="recherche.html" id="recherche">Recherche Avancée</a>
-
                             </form>
+   
                         </div>
 
                     </div>
@@ -87,7 +87,8 @@
                         </div>
                     </div>
                 </header>
-                <div class="col-md-11 my-3 bg-dark" style="height:1500px;">
+                <div class="col-md-11 my-3 bg-dark" style="height:1000px;">
+
                     <div class="cd-grid col-sm-4 " id="cards">
                         <div class="row" id="card-contain">
 
@@ -99,8 +100,8 @@
             </div>
         </div>
 
-        <footer style="background-color: #B82A0C;">
-            <a href="nousconatcter.html" style="color:white;">Nous contacter</a>
+        <footer style="background-color: #B82A0C; height:100px;">
+            <a href="contact.html" style="color:white;">Nous contacter</a>
 
         </footer>
     </div>
