--- a/acceuil.html
+++ b/acceuil.html
@@ -87,9 +87,9 @@
                         </div>
                     </div>
                 </header>
-                <div class="col-md-11 my-3 bg-dark" style="height:1000px;">
+                <div class="col-md-11 my-3 bg-dark" style="height:1000px overflow: scroll;">
 
-                    <div class="cd-grid col-sm-4 " id="cards">
+                    <div class="col-lg-12 mt-3" id="cards">
                         <div class="row" id="card-contain">
 
 
@@ -111,6 +111,7 @@
     <script src="data/auteurs.js"></script>
     <script src="data/series.js"></script>
     <script src="js/modeleBD.js"> </script>
+    <script src="BDD.js"></script>
 </body>
 
 </html>
