--- a/acceuil.html
+++ b/acceuil.html
@@ -87,10 +87,10 @@
                         </div>
                     </div>
                 </header>
-                <div class="col-md-11 my-3 bg-dark" style="height:1000px overflow: scroll;">
+                <div class="col-md-11 my-3" style="height:1000px overflow: scroll;">
 
-                    <div class="col-lg-12 mt-3" id="cards">
-                        <div class="row" id="card-contain">
+                    <div class="col-lg-12" id="cards">
+                        <div class="row " id="card-contain">
 
 
                         </div>
@@ -112,6 +112,15 @@
     <script src="data/series.js"></script>
     <script src="js/modeleBD.js"> </script>
     <script src="BDD.js"></script>
+    <!-- <script type="text/javascript">
+        function autorun()
+        {
+         
+        }
+        if (document.addEventListener) document.addEventListener("DOMContentLoaded", autorun, false);
+        else if (document.attachEvent) document.attachEvent("onreadystatechange", autorun);
+        else window.onload = autorun;
+       </script> -->
 </body>
 
 </html>
