--- a/recherche.html
+++ b/recherche.html
@@ -17,10 +17,12 @@
 
 <body>
     <div class="container-fluid p-0">
-        <div class="col-xs-12">
-            <div id="header" class="p-5 text-center">
-                Site de Apolline et Violette
-            </div>
+        <div id="header" class="p-5 text-center">
+            Site de Apolline et Violette
+            <a href="acceuil.html">
+            <img src="chaisebois-logo.png" style="height:70px; width:70px;">
+            </a>
+        </div>
         </div>
 
     </div>
