--- a/acceuil.html
+++ b/acceuil.html
@@ -19,6 +19,9 @@
         <div class="col-xs-12">
             <div id="header" class="p-5 text-center">
                 Site de Apolline et Violette
+                <a href="acceuil.html">
+                <img src="chaisebois-logo.png" style="height:70px; width:70px;">
+                </a>
             </div>
         </div>
 
@@ -36,6 +39,7 @@
                                 <div class="mb-3">
                                     <label for="email" class="login">Email </label>
                                     <input type="email" class="form-control" id="email" placeholder="Your mail">
+                                    
                                     <div class="invalid-feedback">
                                         Please enter a valid email address for connexion.
                                     </div>
