--- a/acceuil.html
+++ b/acceuil.html
@@ -17,10 +17,10 @@
 
     <div class="container-fluid p-0">
         <div class="col-xs-12">
-            <div id="header" class="text-center" style="height:10vh">
+            <div id="header" class="text-center" style="height:10vh; font-weight:bold; font-size:5vh;">
                 Site de Apolline et Violette
                 <a href="acceuil.html">
-                <img src="chaisebois-logo.png" style="height:70px; width:70px;">
+                <img src="logo4.png" style="height:60px; width:60px;">
                 </a>
             </div>
         </div>
@@ -68,6 +68,7 @@
                                     <input type="text" class="form-control" placeholder="Recherche">
 
                                 </div>
+                                <a href="recherche.html" class="search"> Recherche Avancée</a>
                             </form>
    
                         </div>
@@ -93,7 +94,7 @@
                 </header>
                 <div class="col-md-11 my-3">
 
-                    <div class="col-lg-12" id="cards" style="height:70vh">
+                    <div class="col-lg-12" id="cards" style="height:65vh">
                         <div class="row " id="card-contain">
                         
 
@@ -105,7 +106,7 @@
         </div>
 
         <footer style="background-color: #B82A0C; height:10vh">
-            <a href="contact.html" style="color:white;">Nous contacter</a>
+            <a href="contact.html" style="color:white; text-align:center;">Nous contacter</a>
 
         </footer>
     
