--- a/recherche.html
+++ b/recherche.html
@@ -82,7 +82,7 @@
 
                                         <div class="input-group-append">
 
-                                            <div class="col-sm-6 offset-sm-2">
+                                            <div class="col-sm-6">
                                             <button type="submit" class="btn btn-outline-light btn-lg" style="width:50vh;"
                                                 id="search">
                                                 <i class="fa fa-search" aria-hidden="true"></i>
