mdp et mail a faire +recherche

--- a/detailBd.html
+++ b/detailBd.html
@@ -149,22 +149,9 @@
     <script src="data/albums.js"></script>
     <script src="data/auteurs.js"></script>
     <script src="data/series.js"></script>
-    <script src="js/modeleBD.js"> </script>
-    <script src="BDD.js"></script>
+    <script src="bdd.js"></script>
     <script src="detail.js"></script>
     <script src="Panier.js"></script>
-
-
-
-    <!-- <script type="text/javascript">
-        function autorun()
-        {
-         
-        }
-        if (document.addEventListener) document.addEventListener("DOMContentLoaded", autorun, false);
-        else if (document.attachEvent) document.attachEvent("onreadystatechange", autorun);
-        else window.onload = autorun;
-       </script> -->
 </body>
 
 </html>
