--- a/panier.html
+++ b/panier.html
@@ -152,7 +152,7 @@
     <script src="data/albums.js"></script>
     <script src="data/auteurs.js"></script>
     <script src="data/series.js"></script>
-    <script src="BDD.js"></script>
+    <script src="bdd.js"></script>
     <script src="Panier.js"></script>
 
 
