--- a/recherche.html
+++ b/recherche.html
@@ -129,7 +129,7 @@
     <script src="data/auteurs.js"></script>
     <script src="data/series.js"></script>
     <script src="js/modeleBD.js"> </script>
-    <script src="BDD.js"></script>
+    <script src="bdd.js"></script>
 </body>
 
 </html>
