search a faire, connexion etc etc

--- a/detailBd.html
+++ b/detailBd.html
@@ -83,7 +83,7 @@
                 <header class="py-3 sticky-top">
                     <div class="row flex-nowrap justify-content-between align-items-center">
                         <div class="col d-flex justify-content-end align-items-center">
-                            <a class="btn btn-sm btn-outline-light "id ="basket">
+                            <a class="btn btn-sm btn-outline-light "href="panier.html">
                                 <span>
                                     <i class="fa fa-shopping-basket " aria-hidden="true"></i>
                                 </span>
@@ -108,7 +108,7 @@
                                 </div>
                                 <div class="card-body row ">
                                     <div class="card-body col-xs-5 mt-2">
-                                        <label for="qtite">Quantité:</label>
+                                        <!-- <label for="qtite">Quantité:</label>
                                         <select name="quantite" id="qtite">
                                             <option value="">---</option>
                                             <option value="0">0</option>
@@ -117,7 +117,7 @@
                                             <option value="3">3</option>
                                             <option value="4">4</option>
                                             <option value="5">5</option>
-                                        </select>
+                                        </select> -->
                                     </div>
                                     <div class="card-body col-xs-5">
                                         <button class="btn btn-outline-dark btn-md mt-1 mb-3" type="submit" id="ajout">Ajouter
@@ -149,9 +149,10 @@
     <script src="data/albums.js"></script>
     <script src="data/auteurs.js"></script>
     <script src="data/series.js"></script>
-    <script src="bdd.js"></script>
     <script src="detail.js"></script>
-    <script src="Panier.js"></script>
+    
+
+
 </body>
 
 </html>
