--- a/recherche.html
+++ b/recherche.html
@@ -34,7 +34,7 @@
                 <header class=" pt-3 sticky-top">
                     <div class="row flex-nowrap justify-content-between align-items-center">
                         <div class="col d-flex justify-content-end align-items-center">
-                            <a class="btn btn-sm btn-outline-light" href="#" id="basket">
+                            <a class="btn btn-sm btn-outline-light" href="panier.html" id="basket">
                                 <span>
                                     <i class="fa fa-shopping-basket" aria-hidden="true"></i>
                                 </span>
@@ -128,6 +128,7 @@
     <script src="data/albums.js"></script>
     <script src="data/auteurs.js"></script>
     <script src="data/series.js"></script>
+    <script src="js/modeleBD.js"> </script>
     <script src="bdd.js"></script>
 </body>
 
